--- a/intranet/htdocs/intranet-tmpl/estantes/estante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/estante.tmpl
@@ -19,7 +19,7 @@
                                                                     
                                                                             button   => "btn btn-primary",
                                                                             action   => 'agregarEstante();',
-                                                                            title    => "[% 'Guardar' | i18n %]",
+                                                                            title    => "[% 'Agregar Estante' | i18n %]",
                                                                       
                                                 ) ;
               [% END %]
@@ -27,35 +27,42 @@
 
 </div>
 
-<div id="nuevo_sub_estante" style="display:none">
-    
-    <fieldset class="resultados_busqueda">
-        <legend class="titulo_legend trigger click">  [% "Nuevo Estante" | i18n %] </legend>
-            <input type="hidden" id="estante_nuevo_sub_estante">
-            <input type="hidden" id="padre_nuevo_sub_estante">
-            <input type="text" id="input_nuevo_sub_estante">
-            
-            <script type="text/javascript">
-                  $(document).ready(function() {
-                            $('#input_nuevo_sub_estante').keypress(function(e){if(e.which==13){if(this.value!=''){agregarSubEstante();}}});
+<div id="nuevo_sub_estante"  class="modal hide fade">
+      <div class="modal-header">
+            <h3>[% "Nuevo Subestante" | i18n %]</h3>
+      </div>
+      <div class="modal-body">
+              <input type="text" id="input_nuevo_sub_estante">
+              <input type="hidden" id="estante_nuevo_sub_estante">
+              <input type="hidden" id="padre_nuevo_sub_estante">
+              <script type="text/javascript">
+                          $(document).ready(function() {
+                          $('#input_nuevo_sub_estante').keypress(function(e){if(e.which==13){if(this.value!=''){agregarSubEstante();}}});
                   });
-            </script>
-     </fieldset>
-   
-     [% PERL %]
-                              print C4::AR::Filtros::to_Button(   text    => "[% 'Guardar' | i18n %]",
-                                                                  boton   => "boton_guardar",
-                                                                  onClick => 'agregarSubEstante();',
-                                                                  title   => "[% 'Guardar' | i18n %]",
-                                                                  alternClass => "botonCentrado"
-                                      ) ;
-     [% END %]
+              </script>
+      </div>
+      <div class="modal-footer">
+
+                                          
+              [% PERL %]
+                                        print C4::AR::Filtros::action_button(  
+                                                                            button   => "btn btn-primary",
+                                                                            action => 'agregarSubEstante();',
+                                                                            title   => "[% 'Agregar Subestante' | i18n %]",
+                                                                          
+                                                ) ;
+              [% END %]
+         
+      </div>
 
 </div>
 
-<div id="editar_estante" style="display:none">
-        <fieldset class="resultados_busqueda">
-            <legend class="titulo_legend trigger click">  [% "Estante" | i18n %] </legend>
+<div id="editar_estante" class="modal hide fade">
+
+      <div class="modal-header">
+            <h3>[% "Editar Subestante" | i18n %]</h3>
+      </div>
+      <div class="modal-body">
                 <input type="hidden" id="input_id_estante">
                 <input type="hidden" id="input_padre_estante">
                 <input type="hidden" id="input_abuelo_estante">
@@ -65,19 +72,24 @@
                               $('#input_valor_estante').keypress(function(e){if(e.which==13){if(this.value!=''){modificarEstante();}}});
                             });
                 </script>
-        </fieldset>
-              
-        [% PERL %]
+      </div>
+      <div class="modal-footer">
+
+                                          
+                  [% PERL %]
                                         print C4::AR::Filtros::action_button(   
                                                                             button   => "btn btn-primary",
                                                                             action   => 'modificarEstante();',
-                                                                            title   => "[% 'Guardar' | i18n %]",
+                                                                            title   => "[% 'Aceptar' | i18n %]",
                                                                         
                                         ) ;
-        [% END %]
+                  [% END %]
+         
+      </div>
+   
 </div>
 
-<div id="contenido_estante" class="modal hide fade">
+<div id="contenido_estante" class="modal hide bigModal fade">
       <div class="modal-header">
             <h3> [% "Buscar Contenido" | i18n %]</h3>
       </div>
@@ -105,6 +117,9 @@
                   [% END %] 
 
       </div>
+      <div id="resultado_contenido_estante"> 
+</div>
+
 </div>  
     
 
