--- a/intranet/htdocs/intranet-tmpl/estantes/subEstante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/subEstante.tmpl
@@ -1,3 +1,5 @@
+
+
 <div id="contenido-[% estante.getId %]" class="accordion">
       <div class="accordion-group">
             <div class="accordion-heading">
@@ -5,42 +7,6 @@
             </div>
             <div id="datos_tabla_div_subestante_[% estante.getId %]" class="accordion-body collapse in">
                     <div class="accordion-inner">
-
-                            <div class="form-actions">
-                                    <div id="boton_nuevo_subestante_[% estante.getId %]">
-                                            [% PERL %]
-                                                                print C4::AR::Filtros::action_button(
-                                                                                                    button   => "btn btn-primary",
-                                                                                                    icon => "",
-                                                                                                    title   => "[% 'Agregar estante' | i18n %]",
-                                                                                                    action => "agregarNuevoSubEstante([% estante.getId %],[% estante.getPadre %]);",
-                                                                                            
-                                                                ) ;
-                                            [% END %]
-                                    </div>
-
-                                    <div class="edit_trigger_[% estante.getId %]">
-                                            [% PERL %]
-                                                                print C4::AR::Filtros::action_button(
-                                                                                                    button   => "btn btn-primary",
-                                                                                                    action => "editarEstante('[% estante.getEstante %]',[% estante.getId %],[% estante.getPadre %],[% IF estante.padre %][% estante.estante_padre.getPadre %][% ELSE %]-1[% END %]);",
-                                                                                                    title   => "[%  'Editar estante actual' | i18n %]",
-                                                                                               
-                                                                        ) ;
-                                            [% END %]
-                                    </div>
-
-                                    [% IF cant_subestantes %]
-                                            [% PERL %]
-                                                                print C4::AR::Filtros::action_button(
-                                                                                                    button   => "btn btn-primary",
-                                                                                                    action => "borrarEstantesSeleccionados([% estante.getId %],[% estante.getPadre %]);",
-                                                                                                    title   => "[% 'Borrar seleccionados' | i18n %]",
-                                                                                                
-                                                                        ) ;
-                                            [% END %]
-                                    [% END %]
-                            </div>
 
                             <ul class="ul_tabla_div_subestante_[% estante.getId %] unstyled">
                                   [% IF cant_subestantes %]
@@ -53,7 +19,43 @@
                                   [% ELSE %]
                                               <div class="alert alert-info">[% 'El estante seleccionado no contiene subestantes' | i18n %]</div>
                                   [% END %]
-                            </ul>
+                              </ul>
+                              <div class="form-actions">
+                                    [% IF cant_subestantes %]
+                                            [% PERL %]
+                                                                print C4::AR::Filtros::action_button(
+                                                                                                    button   => "btn btn-danger",
+                                                                                                    action => "borrarEstantesSeleccionados([% estante.getId %],[% estante.getPadre %]);",
+                                                                                                    title   => "[% 'Borrar seleccionados' | i18n %]",
+                                                                                                
+                                                                        ) ;
+                                            [% END %]
+
+                                            [% PERL %]
+                                                                print C4::AR::Filtros::action_button(
+                                                                                                    button   => "btn btn-primary",
+                                                                                                    action => 'editarEstante("[% estante.getEstante %]",[% estante.getId %],[% estante.getPadre %],[% IF estante.padre %][% estante.estante_padre.getPadre %][% ELSE %]-1[% END %]);',
+                                                                                                    title   => "[%  'Editar estante actual' | i18n %]",
+                                                                                               
+                                                                        ) ;
+                                            [% END %]
+
+
+
+                                    [% END %]
+                                  
+                                                                 
+                                            [% PERL %]
+                                                                print C4::AR::Filtros::action_button(
+                                                                                                    button   => "btn btn-success",
+                                                                                                    icon => "",
+                                                                                                    title   => "[% 'Agregar subestante' | i18n %]",
+                                                                                                    action => "agregarNuevoSubEstante([% estante.getId %],[% estante.getPadre %]);",
+                                                                                            
+                                                                ) ;
+                                            [% END %]
+                                    
+                            </div>
 
        
                             [% IF estante.contenido %]
@@ -107,40 +109,43 @@
                                                   </tbody>
                                               </table>
                               
-                                       
-                                              <div class="form-actions">
-                                                  [% PERL %]            
-                                                              print C4::AR::Filtros::action_button(
-                                                                                                                  button   => "btn btn-primary",
-                                                                                                                  title   => "[% 'Agregar contenido' | i18n %]",
-                                                                                                                  action => "agregarContenido([% estante.getId %],[% estante.getPadre %]);",,
-                                                                                      ) ;
-                                                  [% END %]
+                                       </div>
+                            [% ELSE %]
+                                    <div class="alert alert-info">El estante no tiene contenido</div>
                             [% END %]
                             
-                            [% IF estante.contenido %]
-                                  [% PERL %]
-                                                    
-                                                      print C4::AR::Filtros::action_button(
-                                                                                                  button  => "btn btn-danger",
-                                                                                                  action => "borrarContenidoSeleccionado([% estante.getId %],[% estante.getPadre %]);",
-                                                                                                  title   => "[% 'Borrar seleccionados' | i18n %]",
-                                                                      ) ;
+                              <div class="form-actions">
+                                    
+                              
+                                    [% IF estante.contenido %]
+                                          [% PERL %]
+                                                            
+                                                              print C4::AR::Filtros::action_button(
+                                                                                                      button  => "btn btn-danger",
+                                                                                                      action => "borrarContenidoSeleccionado([% estante.getId %],[% estante.getPadre %]);",
+                                                                                                      title   => "[% 'Borrar seleccionados' | i18n %]",
+                                                                              ) ;
 
 
 
-                                  [% END %]   
-                            [% END %]
-                                    </div>
-                                  </div>
-                              </fieldset>
+                                          [% END %]   
+                                    [% END %]
+                                    [% PERL %]            
+                                                              print C4::AR::Filtros::action_button(
+                                                                                                    button   => "btn btn-success",
+                                                                                                    title   => "[% 'Agregar contenido' | i18n %]",
+                                                                                                    action => "agregarContenido([% estante.getId %],[% estante.getPadre %]);",
+                                                                        ) ;
+                                    [% END %]
+                              </div>
+                                  
+                           </fieldset>
  
                         </div>
 
                   </div>
         </div>
 </div>
-<div id="resultado_contenido_estante"> 
-</div>
+
 <div id="subestante-[% estante.getId %]">
 </div>
