--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleReservas.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleReservas.tmpl
@@ -5,7 +5,7 @@
 
             [% IF reservas_asignadas_count %]
                 <div class="well">
-                    [% "Cantidad de ejemplares prestados" | i18n %]: <strong>[% reservas_asignadas_count %]</strong> 
+                    [% "Cantidad de ejemplares para retirar" | i18n %]: <strong>[% reservas_asignadas_count %]</strong> 
                 </div>
 
                 [% PERL %]
