--- a/opac/htdocs/opac-tmpl/temas/DEO/includes/opac.css
+++ b/opac/htdocs/opac-tmpl/temas/DEO/includes/opac.css
@@ -292,3 +292,8 @@ body {
 .nano .content      { padding: 1px; }
 .nano .pane         { background: #444; }
 .nano .pane .slider { background: #111; }
+
+.center_carousel{
+    width: 600px;
+    margin: 0 auto;
+}
