--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
@@ -174,8 +174,13 @@ var loaderPath= "";
                           <dd>[% socio.getNro_socio %]</dd>
                       [% END %]
 
-                      <dt class="inline left rightMargin">[% "Categor&iacute;a del usuario:" | i18n %] </dt>
+                      <dt class="inline left rightMargin">[% "Categor&iacute;a:" | i18n %] </dt>
                       <dd>[%  socio.categoria.getDescription %]</dd>
+                      
+                      <dt class="inline left rightMargin">[% "Estado:" | i18n %] </dt>
+                      <dd><span class="label [% IF socio.esRegular %]label-success[% ELSE %]label-important[% END %]">[% socio.esRegularToString %]</span></dd>
+                      
+                      
 
                       <dt class="inline left rightMargin">[% "Credenciales" | i18n %]:</dt>
                       <dd>[% PERL %] print C4::AR::Utilidades::translateTipoCredencial('[% socio.getCredentialType %]') [% END %]</dd>
