estilos opac - reservas espera

--- a/opac/htdocs/opac-tmpl/temas/DEO/includes/opac.css
+++ b/opac/htdocs/opac-tmpl/temas/DEO/includes/opac.css
@@ -290,3 +290,12 @@ body {
 
 .nano .content      { padding: 1px; }
 .nano .pane         { background: #444; }
+
+
+#signin{
+         min-width: 500px; 
+}
+
+#form-actions-signin{
+          min-width: 500px;
+}
