--- a/intranet/htdocs/intranet-tmpl/estantes/contenidoEstante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/contenidoEstante.tmpl
@@ -39,9 +39,9 @@
                    
                             [% PERL %]
                                         print C4::AR::Filtros::action_set_button(    
-                                              title           => "",
-                                              icon            =>"icon-plus icon-white",
-                                              button          => 'btn btn-info',
+                                              title           =>    "Ediciones",
+                                              icon            =>    "icon-plus icon-white",
+                                              button          =>    'btn btn-info',
 
 
                                               actions         => [ [% FOREACH grupos %]
@@ -57,8 +57,8 @@
                                                                          [% END %]
                                                                 
                                                                   ],
-                                                popover       => {text=>'Esta acci&oacute;n se aplica para todos los ejemplares seleccionados', 
-                                                                  title=> 'Atenci&oacute;n'}
+                                                popover       => {  text=>'La edicion seleccionada se agregara como contenido del estante actual', 
+                                                                    title=> 'Atenci&oacute;n'}
 
                      
                                                 ) ;
