--- a/intranet/htdocs/intranet-tmpl/estantes/estante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/estante.tmpl
@@ -89,15 +89,26 @@
    
 </div>
 
+
 <div id="contenido_estante" class="modal hide bigModal fade">
-      <div class="modal-header">
+ 
+
+  <div class="modal-header">
+            <a class="close" data-dismiss="modal" href="#">×</a>
             <h3> [% "Buscar Contenido" | i18n %]</h3>
       </div>
+<section class="center-section-form">  
+<form class="form-horizontal" onsubmit="return false;">
       <div class="modal-body">
-              <input type="hidden" id="input_contenido_id_estante">
+     
+                  <input type="hidden" id="input_contenido_id_estante">
                   <input type="hidden" id="input_contenido_id_padre_estante">
-                  <input class="horizontal" type="text" id="input_busqueda_contenido">
                   
+                  <div class="control-group">
+                      <label class="control-label" for="input01">Ingrese el criterio de busqueda</label>
+                      <div class="controls">
+                          <input class="horizontal" type="text" id="input_busqueda_contenido">
+                      </div>
                   <script type="text/javascript">
                         $(document).ready(function() {
                                   $('#input_busqueda_contenido').keypress(function(e){if(e.which==13){if(this.value!=''){buscarContenido();}}});
@@ -106,6 +117,8 @@
 
                
       </div>
+      </form>
+     </section>
       <div class="modal-footer">
                   [% PERL %]
                                       print C4::AR::Filtros::action_button(
@@ -113,15 +126,16 @@
                                                                           icon     => "icon-search icon-white",
                                                                           action   => "buscarContenido();",
                                                                           title    => "[% 'Buscar' | i18n %]",
+                                                      
                                               ) ;
                   [% END %] 
 
       </div>
-      <div id="resultado_contenido_estante"> 
-</div>
+       
+      <div id="resultado_contenido_estante"> </div>
 
 </div>  
-    
+
 
 
 [% INCLUDE "verEstante.inc" %]
