--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleSanciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleSanciones.tmpl
@@ -80,7 +80,7 @@ function updateBorrarSancion(responseText){
 	                  [% PERL %]
 	                          print C4::AR::Filtros::action_button( 
 	                                                          button       => "btn click btn-danger",
-	                                                          action       => 'borrarSancion("[% sancion.getId_sancion %]")', 
+	                                                          action       => 'borrarSancion([% sancion.getId_sancion %])', 
 	                                                          icon         => "icon-trash icon-white",
 	                                                          title        => "",
 	                                                      ) ;
