--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleReservas.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleReservas.tmpl
@@ -88,7 +88,7 @@
                                     print C4::AR::Filtros::action_button(  
                                                                         button   => "btn btn-danger",
                                                                         icon    => "icon-white icon-remove",
-                                                                        action => 'cancelarReserva([% "reserva.getId_reserva" %]);',
+                                                                        action => 'cancelarReserva("[% reserva.getId_reserva %]");',
                                             ) ;
                                 [% END %]
                 
