Fix de UI en circulacion rapida

--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -171,7 +171,7 @@
 	            <legend class="trigger_3_[% id2 %] click">
 	               <div class="alert alert-success">
 						<div class="page-header">
-	                       <h2>[% "Detalle de Nivel 2 " | i18n %] <small>[% "GRUPO" | i18n %] [% id2 %] - [% tipo_documento %] ([% nivel2_template %])</small></h2>
+	                       <h2>[% "Detalle de Nivel 2 " | i18n %] <small>([% edicion %])</small> <small>[% "GRUPO" | i18n %] [% id2 %] - [% tipo_documento %] ([% nivel2_template %])</small></h2>
                         </div>                   
                    </div>
                  </legend>
