--- a/opac/htdocs/opac-tmpl/temas/DEO/includes/opac.css
+++ b/opac/htdocs/opac-tmpl/temas/DEO/includes/opac.css
@@ -290,3 +290,8 @@ body {
 
 .nano .content      { padding: 1px; }
 .nano .pane         { background: #444; }
+
+#fotoUsuario{
+	width: 200px;
+	float: right;
+}
