--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/agregarUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/agregarUsuario.tmpl
@@ -154,7 +154,7 @@
               <div class="control-group">
                     <label class="control-label" for="telefono_laboral"> [% "Tel&eacute;fono del trabajo" | i18n %] </label>
                     <div class="controls">
-                          <input  id="telefono_laboral" name="telefono_laboral" required class="input focused" type="number" value="[% socio_modificar.persona.getTelefono_laboral %]">
+                          <input  id="telefono_laboral" name="telefono_laboral" class="input focused" type="number" value="[% socio_modificar.persona.getAlt_telefono %]">
                     </div>
               </div>
 
@@ -197,9 +197,16 @@
             </div>
 
             <div class="control-group">
-                    <label class="control-label" for="categoria_socio_id">[% "Categor&iacute;a del usuario" | i18n %]</label>
+                    <label class="control-label" for="categoria_socio_id">[% "Categor&iacute;ao" | i18n %]</label>
                     <div class="controls">
                           [% comboDeCategorias %]
+                    </div>
+            </div>
+
+            <div class="control-group">
+                    <label class="control-label" for="estadi_socio_id">[% "Estado" | i18n %]</label>
+                    <div class="controls">
+                          [% comboDeEstados %]
                     </div>
             </div>
 
