--- a/intranet/htdocs/intranet-tmpl/auth.tmpl
+++ b/intranet/htdocs/intranet-tmpl/auth.tmpl
@@ -67,7 +67,7 @@
           <span class="icon-bar"></span>
         </a>
 
-        <div id="logo"><a href="[% url_prefix %]/mainpage.pl?token=[% token %]">[% 'MERAN' | i18n %]</a></div>
+        <div id="logo"><a>[% 'MERAN' | i18n %]</a></div>
       </div>
     </div>
 </div>
