--- a/opac/htdocs/opac-tmpl/temas/DEO/includes/opac.css
+++ b/opac/htdocs/opac-tmpl/temas/DEO/includes/opac.css
@@ -54,7 +54,7 @@ body {
 .logo_opac_menu{
 	float: left;
 	line-height:0;
-	width: 150px;
+	max-width: 150px;
 	margin-top: 5px;
 	margin-left: 5px;	
 }
